# Mogul

./: .gitignore  LICENSE  README.md  default.context  default.mgl  logo.html  mogul.cabal  stack.yaml  tmp.js
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/flag-cache/: mogul-0.1.0.0-E5alnxq4rAu6QWNMiqrFvz  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/mogul-0.1.0.0-E5alnxq4rAu6QWNMiqrFvz/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/mogul-0.1.0.0-KefmOzrHo5AJyqeBDcMSes/: Expr.dyn_hi  Expr.hi  Lib.hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD/Text/: Parsec.dyn_hi  Parsec.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD/Text/Parsec/: ByteString.dyn_hi  ByteString.hi  Char.dyn_hi  Char.hi  Combinator.dyn_hi  Combinator.hi  Error.dyn_hi  Error.hi  Expr.dyn_hi  Expr.hi  Language.dyn_hi  Language.hi  Perm.dyn_hi  Perm.hi  Pos.dyn_hi  Pos.hi  Prim.dyn_hi  Prim.hi  String.dyn_hi  String.hi  Text.dyn_hi  Text.hi  Token.dyn_hi  Token.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD/Text/Parsec/ByteString/: Lazy.dyn_hi  Lazy.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD/Text/Parsec/Text/: Lazy.dyn_hi  Lazy.hi
.stack-work/install/x86_64-linux/lts-9.1/8.0.2/pkgdb/: mogul-0.1.0.0-KefmOzrHo5AJyqeBDcMSes.conf  package.cache  parsec3-1.0.1.8-14vgj7YahKy4ZG7Rj9NfiD.conf
app/: Main.hs
public/: index.html
src/: API.hs  CUI.hs  Data.hs  Eval.hs  Expr.hs  Focus.hs  Json.hs  PPrint.hs  Parser.hs  Unlambda.hs
src/Data/: Command.hs  Context.hs  Expr.hs  ExtraExpr.hs  Func.hs  Ident.hs  Mogul.hs  Nav.hs  Transition.hs
src/Parser/: Command.hs  Expr.hs
static/: test.txt
static/css/: base.css  style.css
static/js/: bundle.js
test/: DataSpec.hs  EvalSpec.hs  ExprSpec.hs  FocusSpec.hs  JsonSpec.hs  PPrintSpec.hs  ParserSpec.hs  Spec.hs  SpecExpr.hs  SpecFocus.hs  SpecPPrint.hs  SpecParser.hs  TestExpr.hs  TestPPrint.hs  TestParser.hs  UnlambdaSpec.hs  _JsonSpec.hs  sample.context
webui/: README.md  index.html  package.json  webpack.config.js
webui/assets/: app.js
webui/assets/components/: MogulApply.vue  MogulCombinator.vue  MogulExpr.vue  MogulLambda.vue  MogulVariable.vue
