name:                mogul
version:             0.1.0.0
-- synopsis:
description:         An interpreter that evaluates λ-calculations step by step.
homepage:            https://github.com/todays-mitsui/Mogul.git#readme
license:             GPL
license-file:        LICENSE
author:              Mitsui
maintainer:          todays.mitsui@gmail.com
copyright:           2017 Mitsui
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data
                     -- , Expr
                     , Parser
                     , PPrint
                     , Focus
                     -- , Eval
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , parsec3
                     , mtl
  default-language:    Haskell2010

executable mogul
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mogul
                     , text
                     , containers
                     , parsec3
                     , mtl
  default-language:    Haskell2010

test-suite mogul-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec
                     , ExprSpec
                     , FocusSpec
                     , PPrintSpec
  build-depends:       base
                     , hspec
                     , mogul
                     , text
                     , containers
                     , parsec3
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/todays-mitsui/Mogul
