name:                mogul
version:             0.1.0.0
-- synopsis:
description:         An interpreter that evaluates λ-calculations step by step.
homepage:            https://github.com/todays-mitsui/Mogul.git#readme
license:             GPL
license-file:        LICENSE
author:              Mitsui
maintainer:          todays.mitsui@gmail.com
copyright:           2017 Mitsui
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.Ident
                     , Data.Expr
                     , Data.Context
                     , Data.Func
                     , Data.Nav
                     , Data.ExtraExpr
                     , Data.Transition
                     , Data.Command
                     , Data.Mogul
                     , Unlambda
                     , Parser.Expr
                     , Parser.Command
                     , PPrint
                     , Eval
                     , CUI
                     , API
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , containers
                     , parsec3
                     , mtl
                     , directory
                     , aeson
                     , scotty
                     , wai-middleware-static
                     -- , file-embed
  default-language:    Haskell2010

executable mogul
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mogul
                     , text
                     , containers
                     , parsec3
                     , mtl
                     , directory
                     , scotty
  default-language:    Haskell2010

test-suite mogul-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DataSpec
                     , ParserSpec
                     , UnlambdaSpec
                     , FocusSpec
                     , PPrintSpec
                     , EvalSpec
  build-depends:       base
                     , hspec
                     , mogul
                     , text
                     , bytestring
                     , containers
                     , parsec3
                     , mtl
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/todays-mitsui/Mogul
